# main

./: .gitignore  blender_notes.txt  cmp_codes.py  color_analyzer.py  git_memento.txt  nuancier.py  record_screen.sh  resolv_cube.py
a_star/: CMakeLists.txt  Makefile  main.cpp
a_star/data/: graph.html  graph_heur.html  graph_mix.html  graph_w.html  obstacle.shx
a_star/srcs/: main.cpp
anim_2d/: CMakeLists.txt  Makefile  constantes.h  main.cpp
anim_2d/script_gimp/: anim_2d.py
anim_2d/srcs/: anim_2d.cpp  anim_2d.h  constantes.h  main.cpp
asteroid/: CMakeLists.txt
asteroid/data/: crazy_bullet.json  cruiser.json  fatman.json  hero.json  small_bullet.json  small_bullet_hero.json
asteroid/shaders/: aabb.vert  fragmentshader_star.txt  fragmentshader_texture.txt  geomshader_explode.txt  star.vert  texture.frag  texture.vert  vertexshader_star.txt  vertexshader_texture.txt
asteroid/srcs/: asteroid.cpp  asteroid.h  constantes.h  debug_texture.py  flat_json_level.py  flat_json_ship.py  footprint.py  level.cpp  level.h  main.cpp  rotate_png.py  ship.cpp  ship.h  ship_model.cpp  ship_model.h  star.cpp  star.h
audio2video/: CMakeLists.txt
audio2video/audio2video/: Makefile  constantes.h  main.cpp  spectrum.cpp  spectrum.h
audio2video/configs/: conn_simple_3_1.json  env_saw_exp.json  env_saw_linear.json  env_triangle_exp.json  env_triangle_linear.json  morph_translate_x.json  visu_simple_1.json
audio2video/data/: rocks.xml  test_osc.pd  tree.mtl  tree.xml  tree2.mtl  tree3.xml  tree_dead.xml
audio2video/srcs/: constantes.h  main.cpp  spectrum.cpp  spectrum.h
audio2video_2/: CMakeLists.txt
audio2video_2/srcs/: audacity.py  cmp_ffts.py  fake_audacity.py  main.cpp  plot.py
basic_opengl/: CMakeLists.txt
basic_opengl/srcs/: basic_recording.cpp  main.cpp
collage/: CMakeLists.txt
collage/collage/: Makefile  constantes.h  main.cpp
collage/srcs/: audio_utils.cpp  audio_utils.h  constantes.h  main.cpp
collage/tmp/: Makefile  main.cpp
ffmpeg_mp4toppm/: CMakeLists.txt
ffmpeg_mp4tosdl/: CMakeLists.txt
ffmpeg_mp4tosdl/srcs/: decode_mp4 copie.cpp  decode_mp4.cpp  decode_mp4_v1.cpp  decode_mp4_v2.cpp
ffmpeg_mpeg2sdl/: CMakeLists.txt  notes.txt
ffmpeg_mpeg2sdl/data/: config_01.json  config_model.json
ffmpeg_mpeg2sdl/srcs/: decode_mpeg_v1.cpp  decode_mpeg_v2.cpp  decode_mpeg_v3.cpp  decode_mpeg_v4 copie.cpp  decode_mpeg_v4.cpp
game_of_life/: CMakeLists.txt
game_of_life/shaders/: simple.frag  simple.vert
game_of_life/srcs/: gol.cpp  gol.h  grid.cpp  grid.h  main_gol.cpp  main_turmite.cpp  turmite.cpp  turmite.h
looper_audio_video/: CMakeLists.txt  launch_all.sh
looper_audio_video/shaders/: fragmentshader_movie.txt  movie.vert
looper_audio_video/srcs/: audio_sampler.cpp  audio_sampler.h  audio_sampler_main.cpp  constantes.h  cv_in.cpp  cv_in.h  cv_in_main.cpp  cv_out.cpp  cv_out.h  cv_out_main.cpp  list_audio_devices.cpp  looper.cpp  looper.h  looper_gl.cpp  looper_gl.h  looper_gl_main.cpp  looper_main.cpp  looper_sdl.h  mpeg_reader.cpp  mpeg_reader.h  mpeg_reader_test.cpp  osc_in.h  receiver_test.cpp  receiver_test.h  shared_mem.cpp  shared_mem.h  video_sampler.cpp  video_sampler.h  video_sampler_main.cpp  wav_in.cpp  wav_in.h  wav_in_main.cpp
looper_sdl/: CMakeLists.txt  debug.py  launch_all.sh
looper_sdl/cmake/: FindPortaudio.cmake
looper_sdl/data/: receiver_test.txt  sampler_01.json  video_model.json  video_sampler.txt  video_sampler_01.json
looper_sdl/srcs/: audio_sampler.cpp  audio_sampler.h  audio_sampler_main.cpp  cv_in.cpp  cv_in.h  cv_in_main.cpp  cv_out.cpp  cv_out.h  cv_out_main.cpp  cv_player.cpp  cv_player.h  cv_player_main.cpp  looper_main.cpp  looper_sdl.cpp  looper_sdl.h  receiver_test.cpp  receiver_test.h  receiver_test_main.cpp  sampler copie.h  sampler.cpp  sampler.h  sampler_main.cpp  video_sampler.cpp  video_sampler.h  video_sampler_main.cpp
nodejs_socket_io/: CMakeLists.txt  app.js  curl_tmp.txt
nodejs_socket_io/srcs/: main_io.cpp
nodejs_socket_io/web/: index.html  server.js
path_find_hpa/: CMakeLists.txt
racing/: CMakeLists.txt  TODO.txt
racing/data/: car1.json  editor_help.txt  main_help.txt  names.txt
racing/scripts/: barriers.py  bump_cars.sh  fill_texture.py  fix_cars_tmp.py  fix_drivers_tmp.py  fix_tiles_tmp.py  fix_tracks_tmp.py  flag_effect.sh  gen_beach.sh  gen_flag.sh  gen_flag_json.py  gen_tiles.py  gen_water.sh  modify_cars.py  reset_records.py  rotate_tiles.py
racing/shaders/: barrier.vert  choose_track.frag  choose_track.vert  fragmentshader_barrier.txt  fragmentshader_spark.txt  fragmentshader_texture.txt  fragmentshader_water.txt  smoke.vert  spark.vert  texture.vert  tire_track.vert  vertexshader_driver_face.txt  vertexshader_map.txt  vertexshader_simple.txt  vertexshader_simple_editor.txt  vertexshader_texture.txt  vertexshader_water.txt
racing/srcs/: action.cpp  action.h  car.cpp  car.h  collision.cpp  collision.h  driver.cpp  driver.h  editor.cpp  fill_texture.py  fix_tiles_tmp.py  gen_tiles.py  grid.cpp  grid.h  main.cpp  material.cpp  material.h  racing.cpp  racing.h  rotate_tiles.py  smoke.cpp  smoke.h  spark.cpp  spark.h  static_object.cpp  static_object.h  tire_track.cpp  tire_track.h  track.cpp  track.h  track_editor.cpp  track_editor.h  water.cpp  water.h
racing/tmp/: hero_car_save1203.json  hero_car_save1303.json
racing/web/: package-lock.json  package.json  racing.html  server.js
samourai/: CMakeLists.txt  Makefile  constantes.h  main.cpp
samourai/data/: castle.mtl  castle.xml  gadjo.blend  gadjo.blend1  gadjo.xml  hero.xml  (+12 more)
sandbox/: CMakeLists.txt  Makefile  constantes.h  last.txt  main.cpp  protocol.h
spaceship/: CMakeLists.txt  Makefile  constantes.h  level.cpp  level.h  main.cpp  ship.cpp  ship.h
strategy/: CMakeLists.txt  reinit_teams_path.py
test_bst/: CMakeLists.txt
test_dcel/: CMakeLists.txt
test_elements/: CMakeLists.txt
test_font/: CMakeLists.txt
test_graph/: CMakeLists.txt
test_midi/: CMakeLists.txt
test_particle/: CMakeLists.txt
test_path_find/: CMakeLists.txt
test_path_find_a_star/: CMakeLists.txt
test_socket_util/: CMakeLists.txt
(+2296 files in other folders)
